js/js.translator/testData/incremental/invalidation/interfaceWithDefaultParams/lib1/l1.4.kt
interface InterfaceA {
    fun functionA(x: Int, s: String, b: Boolean? = true, i: Int = 1): Int
}
